# AgentForge

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.web  README.md  README_EN.md  docker-compose.yml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: =1.13.0  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_tables.py  002_add_indexes.py
backend/app/: __init__.py  __main__.py  cli.py  config.py  main.py
backend/app/core/: __init__.py  agent.py  auth.py  llm.py  memory.py  protocol.py  tool_runner.py  workflow.py
backend/app/models/: __init__.py  agent_config.py  api_key.py  audit_log.py  base.py  conversation.py  database.py  message.py  usage.py  user.py
backend/app/plugins/: __init__.py  base.py  manager.py
backend/app/routers/: __init__.py  agent.py  apikey.py  audit.py  auth.py  chat.py  marketplace.py  plugin.py  tool.py  usage.py  workflow.py  ws.py
backend/app/tools/: __init__.py  base.py  code.py  data.py  file.py  search.py
backend/app/utils/: audit.py  crypto.py  usage.py
backend/tests/: __init__.py  conftest.py  test_agent_engine.py  test_api_endpoints.py  test_audit_logging.py  test_auth.py  test_chat_integration.py  test_chat_persistence.py  test_memory.py  test_tools.py  test_usage_recording.py  test_workflow.py
deploy/k8s/: api-deployment.yaml  configmap.yaml  db-statefulset.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.yaml  (+3 more)
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
presets/: analyst.yaml  assistant.yaml  coder.yaml  researcher.yaml  translator.yaml  writer.yaml  zhipu_assistant.yaml
scripts/: init_db.py  start.bat  start.sh
(+38 files in other folders)
